# multi_language_lib

./: .gitignore  README.md
.circleci/: config.yml
R/: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  R.CMakeLists.txt  conaninfo.txt  configure  install_manifest.txt
R/R/: RcppExports.R
R/src/: Makefile  RcppExports.cpp  example.cc
R/tests/testthat/: testexample.R
cpp/: .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt  conanfile.txt.old  test.cc
cpp/example/: example.cc  example.hpp
cpp/example/__tests__/: example_test.cc
cpp/test_package/: CMakeLists.txt  conanfile.py  main.cc
docker/: Dockerfile
notebooks/: R.ipynb  python.ipynb
python/: .gitignore  CMakeLists.txt  example_test.py  requirements.txt  setup.py
python/src/example/: example.cc
python/tests/: example_test.py
